2000-10-27  J.T. Conklin  <jtc@redback.com>

	* arch-utils.c (set_architecture, set_architecture_from_arch_mach,
 	set_gdbarch_from_file): Fix spelling error.
	* v850-tdep.c (v850_target_architecture_hook): Likewise.
	* gdbarch.sh: Fix spelling errors in comment.
	* gdbarch.c, gdbarch.h: Regenerate.

	* ppcnbsd-nat.c (fetch_core_registers, fetch_inferior_registers,
 	store_inferior_registers): Support older NetBSD/powerpc systems
 	from before fp reg support was added.  Adapt to register number
	changes caused when powerpc target was multi-arched.

2000-10-26  David B. Anderson <davea@sgi.com>

	* breakpoint.c breakpoint.h hppab-nat.c infrun.c
	language.h mcore-tdep.c mips-tdep.c symfile.c symtab.c
	symtab.h target.c tm-mips.h xm-sun4sol2.h: Corrected
	spelling errors in comments.
	* gdbarch.c gdbarch.sh: Removed word from comment.

2000-10-26  Kevin Buettner  <kevinb@redhat.com>

	* sun3-nat.c (fetch_core_registers): Protoize.
	* symm-nat.c (print_1167_regs, child_xfer_memory): Protoize.

2000-10-26  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* stabsread.c (define_symbol): Update comment.

2000-10-26 Pierre Muller <muller@ics.u-strasbg.fr>

     	* stabsread.c (define_symbol): Set the type_name of the type
	of the new symbol to the symbol name for type symbol, if the
	language is Pascal.
	
2000-10-26  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* arch-utils.c, arch-utils.h (default_convert_from_func_ptr_addr):
	New function.
	* gdbarch.sh (CONVERT_FROM_FUNC_PTR_ADDR):  Add.
	* gdbarch.c, gdbarch.h:  Regenerate.
	* valops.c (find_function_addr):  Use CONVERT_FROM_FUNC_PTR_ADDR
	unconditionally.

	* config/rs6000/tm-rs6000.h (CONVERT_FROM_FUNC_PTR_ADDR):  Delete
	definition.
	* config/powerpc/tm-linux.h (CONVERT_FROM_FUNC_PTR_ADDR):  Remove
	undef.
	* rs6000-tdep.c (rs6000_convert_from_func_ptr_addr):  Fix comment.
	(rs6000_gdbarch_init):  Register rs6000_convert_from_func_ptr_addr
	if not ELFOSABI_LINUX.
